--- a/Subscriber/Web.config
+++ b/Subscriber/Web.config
@@ -9,10 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="EventGridContext" connectionString="Data Source={azure-SQL-Server}.database.windows.net;Initial Catalog={azure-bd};User ID={user-bd};Password={password-bd};MultipleActiveResultSets=True;TrustServerCertificate=True;Connection Timeout=30" providerName="System.Data.SqlClient" />
+    <add name="EventGridContext" connectionString="Data Source=eventgridnfc.database.windows.net;Initial Catalog=EventGridBD;User ID=nfc;Password=Pasiona18;MultipleActiveResultSets=True;TrustServerCertificate=True;Connection Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="SubscriptionID" value="{azure-subscriptionID}" />
+    <add key="SubscriptionID" value="86dfb36d-cb52-4101-a66e-e777590f35b4" />
     <add key="ResourceGroup" value="EventGrid" />
     <add key="EventGridTopic" value="CustomTopic" />
     <add key="ApiAppUrl" value="https://eventgridnfc.azurewebsites.net" />
