--- a/EventGridConsole.Core/EventGridConsole.Core.csproj
+++ b/EventGridConsole.Core/EventGridConsole.Core.csproj
@@ -8,6 +8,10 @@
   <ItemGroup>
     <Folder Include="Entities\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\..\usr\local\share\dotnet\sdk\NuGetFallbackFolder\newtonsoft.json\10.0.1\lib\netstandard1.3\Newtonsoft.Json.dll</HintPath>
